@@ -31,6 +31,7 @@
 #include <Rcpp/stats/lnorm.h>
 #include <Rcpp/stats/weibull.h>
 #include <Rcpp/stats/logis.h>
+#include <Rcpp/stats/f.h>
 
 #include <Rcpp/stats/binom.h>
 #include <Rcpp/stats/pois.h>
