@@ -1,6 +1,6 @@
 2010-08-09  Romain Francois <romain@r-enthusiasts.com>
 
-	* inst/include/Rcpp/stats/lnorm.h: Added d-p-q (lnorm|weibull|logis)
+	* inst/include/Rcpp/stats/lnorm.h: Added d-p-q (lnorm|weibull|logis|f)
 	generated by the script
 
 2010-08-06  Douglas Bates  <bates@stat.wisc.edu>
